[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-geolocation"
version = "1.0.0"
description = "WiFi Geolocation integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
  {name = "WiFi Geolocation Contributors"},
]
keywords = ["home-assistant", "geolocation", "wifi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]

[tool.setuptools]
packages = ["custom_components.wifi_geolocation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["custom_components/wifi_geolocation"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
fail_under = 95
precision = 2
show_missing = true

[tool.ruff]
required-version = ">=0.13.0"
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "A001",   # Variable {name} is shadowing a Python builtin
  "ASYNC",  # flake8-async
  "B002",   # Python does not support the unary prefix increment
  "B007",   # Loop control variable {name} not used within loop body
  "B014",   # Exception handler with duplicate exception
  "B023",   # Function definition does not bind loop variable {name}
  "B026",   # Star-arg unpacking after a keyword argument is strongly discouraged
  "B904",   # Use raise from to specify exception cause
  "C",      # complexity
  "COM818", # Trailing comma on bare tuple prohibited
  "D",      # docstrings
  "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "E",      # pycodestyle
  "F",      # pyflakes/autoflake
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN001", # import concentions; {name} should be imported as {asname}
  "ISC001", # Implicitly concatenated string literals on one line
  "LOG",    # flake8-logging
  "N804",   # First argument of a class method should be named cls
  "N805",   # First argument of a method should be named self
  "N815",   # Variable {name} in class scope should not be mixedCase
  "PERF",   # Perflint rules
  "PGH004", # Use specific rule codes when using noqa
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF005", # Consider iterable unpacking instead of concatenation
  "RUF006", # Store a reference to the return value of asyncio.create_task
  "RUF013", # PEP 484 prohibits implicit Optional
  "RUF019", # Unnecessary key check before dictionary access
  "RUF100", # Unused `noqa` directive
  "S102",   # Use of exec detected
  "S103",   # bad-file-permissions
  "S108",   # hardcoded-temp-file
  "S602",   # subprocess-popen-with-shell-equals-true
  "S604",   # call-with-shell-equals-true
  "S608",   # hardcoded-sql-expression
  "SIM",    # flake8-simplify
  "T100",   # Trace found: {name} used
  "T20",    # flake8-print
  "TID251", # Banned imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle
]

ignore = [
  "D202",   # No blank lines allowed after function docstring
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
  "D406",   # Section name should end with a newline
  "D407",   # Section name underlining
  "E501",   # line too long
  "E731",   # do not assign a lambda expression, use a def
  "PLC1901", # {existing} can be simplified to {replacement} as an empty string is falsey
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "TRY003", # Avoid specifying long messages outside the exception class
  "TRY400", # Use `logging.exception` instead of `logging.error`
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.category_registry" = "cr"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.floor_registry" = "fr"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.helpers.label_registry" = "lr"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "custom_components"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "PT009",  # Use a regular `assert` instead of unittest-style `assertEqual`
  "PT027",  # Use `pytest.raises` instead of unittest-style `assertRaises`
  "S101",   # Use of assert detected
  "D",      # Docstring requirements
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked", "import-not-found", "import-untyped"]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "aiohttp.*",
  "voluptuous.*",
  "homeassistant.*",
]
ignore_missing_imports = true
